--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
     "rxjs": "~7.8.0",
+    "zod": "^3.23.8",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@nx/js": "20.0.12",
     "@nx/node": "20.0.12",
     "@nx/playwright": "20.0.12",
+    "@nx/vite": "20.0.12",
     "@nx/web": "20.0.12",
     "@nx/workspace": "20.0.12",
     "@playwright/test": "^1.36.0",
@@ -47,6 +49,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "@typescript-eslint/utils": "^8.0.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
     "angular-eslint": "^18.3.0",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
@@ -62,6 +66,8 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1"
   }
 }
