--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -5,6 +5,12 @@
   "projectType": "application",
   "tags": [],
   "targets": {
+    "migrations": {
+      "executor": "@acme/migrations:run",
+      "options": {
+        "config": "apps/api/.postgratorrc.json"
+      }
+    },
     "build": {
       "executor": "@nx/esbuild:esbuild",
       "outputs": ["{options.outputPath}"],
@@ -12,7 +18,7 @@
       "options": {
         "platform": "node",
         "outputPath": "dist/apps/api",
-        "format": ["cjs"],
+        "format": ["esm"],
         "bundle": false,
         "main": "apps/api/src/main.ts",
         "tsConfig": "apps/api/tsconfig.app.json",
