--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "axios": "^1.6.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
+    "pg": "^8.13.1",
+    "postgrator": "^7.3.0",
+    "postgrator-cli": "^8.1.0",
     "rxjs": "~7.8.0",
     "zod": "^3.23.8",
     "zone.js": "~0.14.3"
@@ -36,14 +39,16 @@
     "@nx/eslint-plugin": "20.0.12",
     "@nx/jest": "20.0.12",
     "@nx/js": "20.0.12",
-    "@nx/node": "20.0.12",
+    "@nx/node": "^20.0.12",
     "@nx/playwright": "20.0.12",
+    "@nx/plugin": "^20.0.12",
     "@nx/vite": "20.0.12",
     "@nx/web": "20.0.12",
     "@nx/workspace": "20.0.12",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~18.2.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
@@ -60,6 +65,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
+    "jsdom": "~22.1.0",
     "nx": "20.0.12",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
@@ -68,6 +74,7 @@
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
     "vitest": "^1.3.1"
   }
 }
