--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.6.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
+    "kysely": "^0.27.4",
+    "kysely-codegen": "^0.17.0",
     "pg": "^8.13.1",
     "postgrator": "^7.3.0",
     "postgrator-cli": "^8.1.0",
