--- a/tools/docker-compose/package.json
+++ b/tools/docker-compose/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/migrations",
+  "name": "@acme/docker-compose",
   "version": "0.0.1",
   "dependencies": {
     "@nx/devkit": "20.0.12",
