--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,7 +8,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2020",
     "module": "esnext",
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@acme/characters-api": ["packages/characters/shared/api/src/index.ts"],
-      "@acme/migrations": ["tools/migrations/src/index.ts"]
+      "@acme/database": ["tools/database/src/index.ts"],
+      "@acme/docker-compose": ["tools/docker-compose/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
