--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,13 +9,13 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2020",
-    "module": "esnext",
+    "module": "CommonJS",
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@acme/characters-api": ["packages/characters/shared/api/src/index.ts"],
+      "@acme/characters-api": ["packages/characters/api/src/index.ts"],
       "@acme/database": ["tools/database/src/index.ts"],
       "@acme/docker-compose": ["tools/docker-compose/src/index.ts"]
     }
