--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
-    "@fastify/autoload": "~5.7.1",
-    "@fastify/sensible": "~5.2.0",
+    "@fastify/autoload": "~6.0.2",
+    "@fastify/sensible": "~6.0.1",
+    "@fastify/swagger": "^9.3.0",
+    "@fastify/swagger-ui": "^5.1.0",
     "axios": "^1.6.0",
-    "fastify": "~4.13.0",
-    "fastify-plugin": "~4.5.0",
+    "fastify": "~5.1.0",
+    "fastify-plugin": "~5.0.1",
+    "fastify-type-provider-zod": "^4.0.2",
     "kysely": "^0.27.4",
     "kysely-codegen": "^0.17.0",
     "pg": "^8.13.1",
-    "postgrator": "^7.3.0",
-    "postgrator-cli": "^8.1.0",
+    "pino-pretty": "^13.0.0",
+    "postgrator": "^8.0.0",
+    "postgrator-cli": "^9.0.0",
     "rxjs": "~7.8.0",
     "zod": "^3.23.8",
     "zone.js": "~0.14.3"
@@ -54,7 +58,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
-    "@types/node": "~18.16.9",
+    "@types/node": "~22.9.0",
     "@typescript-eslint/utils": "^8.0.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
