--- a/nx.json
+++ b/nx.json
@@ -42,6 +42,10 @@
       "cache": true,
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
+    },
+    "@nx/jest:jest": {
+      "cache": true,
+      "inputs": ["default", "^production"]
     }
   },
   "plugins": [
